force-app/main/default/objects/Commitment_Letter__c/Commitment_Letter__c.object-meta.xml
<CustomObject>
    <label>Commitment Letter</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Commitment Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitment Letters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>