force-app/main/default/objects/Commitment_Letter__c/fields/Active_From__c.field-meta.xml
<CustomField>
    <fullName>Active_From__c</fullName>
    <label>Active From</label>
    <type>Date</type>
</CustomField>