force-app/main/default/objects/Commitment_Letter__c/fields/Active_To__c.field-meta.xml
<CustomField>
    <fullName>Active_To__c</fullName>
    <label>Active To</label>
    <type>Date</type>
</CustomField>