force-app/main/default/objects/Commitment_Letter__c/fields/Add_Deal__c.field-meta.xml
<CustomField>
    <fullName>Add_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field is used by flow to add existing deal on Commitment Letter</description>
    <label>Add Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commitment Letters (Add Deal)</relationshipLabel>
    <relationshipName>Commitment_Letters1</relationshipName>
    <type>Lookup</type>
</CustomField>