force-app/main/default/objects/Commitment_Letter__c/fields/Add_Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Add_Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>field used by flow Select Village Presence Flow on lighting migration</description>
    <label>Add Village Presence</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Commitment Letters</relationshipLabel>
    <relationshipName>Commitment_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>