force-app/main/default/objects/Commitment_Letter__c/fields/External_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Document_Link__c</fullName>
    <label>External Document Link</label>
    <type>Url</type>
</CustomField>